<resources>
    <string name="app_name">WSR Connect</string>
    <string name="plug"> </string>
    <string name="start_screen_logo">WSR Connect</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="messenger">Messenger</string>
    <string name="tasks">Tasks</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="about_me">About Me</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="profile_avatar">Profile Avatar</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="search_for_users">Search for users</string>
    <string name="search_for_messages">Search for messages</string>
    <string name="search_for_app_users">Search for app users</string>
    <string name="search_for_company_users">Search for company users</string>
    <string name="search_for_board_users">Search for board users</string>
    <string name="empty_frame">So lonely and sad&#8230;\n But lets light up\n this place a bit,\n start a new chat\n with your friend!</string>
    <string name="message">Message</string>
    <string name="welcome">Welcome</string>
    <string name="empty_company">It looks like you are not currently  a member of the company, you  can create your own or join an  existing one by accepting the invitation</string>
    <string name="create">Create</string>
    <string name="invitations">Invitations</string>
    <string name="name_of_company">Name of company</string>
    <string name="creating_company">Creating company</string>
    <string name="accept">Accept</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="name_of_board">Name of Board</string>
    <string name="name_of_column">Name of Column</string>
    <string name="edit_board">Edit Board</string>
    <string name="delete_board">Delete Board</string>
    <string name="edit">Edit</string>
    <string name="edit_card">Edit Card</string>
    <string name="delete_card">Delete Card</string>
    <string name="long_desc">Long Description</string>
    <string name="short_desc">Short Description</string>
    <string name="column_title">Column Title</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="quit_alert">Do you really want to quit?</string>
    <string name="invite">Invite</string>
    <string name="send">Send</string>
    <string name="text_of_invitation">Text of invitation</string>
    <string name="quit">Quit</string>
    <string name="ask_for_permission">Please give permission</string>
    <string name="reply">Reply</string>
    <string name="copy">Copy</string>
    <string name="create_card">Create Card</string>
    <string name="card_title">Card Title</string>
    <string name="edit_column">Edit Column</string>
    <string name="delete_column">Delete Column</string>
    <string name="go">Go</string>
    <string name="to_write">To write</string>
    <string name="user_avatar">User Avatar</string>
    <string name="deadline">Deadline</string>
    <string name="add_deadline">Add deadline</string>
    <string name="removeDeadline">Remove deadline</string>
    <string name="participants">Participants</string>
    <string name="add">Add</string>
    <string name="company_users">Company users</string>
    <string name="chat_name">Chat name</string>
    <string name="delete_group_chat_alert">Do you want to delete the chat?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="addCounter">Add:\u0020</string>
    <string name="no_deadline">No deadline</string>
    <string name="create_group_chat">Create group chat</string>
    <string name="add_board">Add board</string>
    <string name="create_board">Create board</string>
    <string name="create_column">Create column</string>
    <string name="board_users">Board users</string>
    <string name="delete_avatar">Delete Avatar</string>
    <string name="delete_img">Delete Image</string>
    <string name="no_messages">no messages yet</string>
    <string name="search">Search</string>
</resources>